deployment/k8s/sonarqube/deployment-sonarqube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: compass-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:lts-community
          ports:
            - containerPort: 9000
          resources:
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonar-data
      volumes:
        - name: sonar-data
          persistentVolumeClaim:
            claimName: sonar-pvc
