deployment/k8s/sonarqube/sonarqube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-service
  namespace: compass-stage
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
